<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2022 Google LLC

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         https://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Yolo\'s Realm</string>

    <string name="non_consumable_banner_title">Own It Forever</string>
    <string name="non_consumable_banner_subtitle">Exclusive gear that defines your legend</string>

    <string name="consumable_banner_title">Subscription Packages</string>
    <string name="consumable_banner_subtitle">Create a subscription plan that fits your watchlist</string>

    <string name="otp_title_placeholder">Product name</string>
    <string name="otp_description_placeholder">Product description</string>
    <string name="otp_price_placeholder">$$$</string>
    <string name="resources">Resources</string>
    <string name="github">GitHub</string>
    <string name="codelab">Codelab</string>
    <string name="licenses">Licenses</string>
    <string name="github_url" translatable="false">https://github.com/googlesamples/play-billing-samples</string>
    <string name="codelab_url" translatable="false">https://codelabs.developers.google.com/play-billing-analyze-product-purchase-drop-offs</string>
    <string name="buy_button">Buy Products</string>
    <string name="my_subscriptions_title">My Subscriptions</string>
    <string name="my_subscriptions_subtitle">Add or remove subscription packages to update you current subscription bundle</string>
    <string name="update_subscriptions">Update Subscriptions</string>
    <string name="no_active_subscriptions">You have no active subscriptions</string>

</resources>
