<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2022 Google LLC

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         https://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/motion_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    app:layoutDescription="@xml/activity_main_scene">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/banner_image"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/roundedCornersImageView"
        app:srcCompat="@drawable/banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/product_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:background="@color/md_theme_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/non_consumable_banner_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/non_consumable_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/non_consumable_banner_title"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

                <TextView
                    android:id="@+id/non_consumable_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/non_consumable_banner_subtitle"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                    android:textColor="#444746" />
            </LinearLayout>

            <include
                android:id="@+id/product_one_time_product_01"
                layout="@layout/product_card" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:id="@+id/banner_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consumable_banner_title"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

                <TextView
                    android:id="@+id/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consumable_banner_subtitle"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                    android:textColor="#444746"/>
            </LinearLayout>

            <include
                android:id="@+id/product_consumable_product_01"
                layout="@layout/product_card" />

            <include
                android:id="@+id/product_consumable_product_02"
                layout="@layout/product_card" />

            <include
                android:id="@+id/product_consumable_product_03"
                layout="@layout/product_card" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/resources_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/resources"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/github_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="6dp"
                    android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                    android:layout_height="wrap_content"
                    android:text="@string/github"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/codelab_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="6dp"
                    android:layout_marginHorizontal="6dp"
                    android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                    android:layout_height="wrap_content"
                    android:text="@string/codelab"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/licenses_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="6dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                    android:text="@string/licenses"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.motion.widget.MotionLayout>